# SimpleConfig

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md  SimpleConfig.sln  doxygen-settings  doxygen_custom_stylesheet.css  utility.cpp
CMake/: CMakeCache.txt  CMakeLists.txt  Makefile  build  build.bat  build.sh  cmake_install.cmake
Documentation/: main.html
Documentation/html/: _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  class_config_handle.html  class_config_handle.js  class_default_parser.js  class_parser.js  class_parser_base.html  classes.html  config__loader_8cpp_source.html  config__loader_8h.js  config__types_8h.html  dir_58093e8ade1af85d797620b53f775ade.html  dir_f352fb2014ec6b8ba5375403641d5b38.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_defs.html  globals_type.html  hierarchy.js  main_8cpp_source.html  navtree.css  navtreedata.js  tabs.css  unicode__defines_8h_source.html  utility_8cpp_source.html  utility_8h.html  utility_8h_source.html
Linux_G++/: config_loader.h  config_types.h
SimpleConfig/: SimpleConfig.vcxproj  SimpleConfig.vcxproj.filters  config_loader.cpp  config_loader.h  config_types.h  main.cpp  unicode_defines.h  utility.cpp
Windows_MSVC_2015/: SimpleConfig.sln
Windows_MSVC_2015/SimpleConfig/: config_loader.cpp  config_loader.h  config_types.h  unicode_defines.h
Windows_MSVC_2015/SimpleConfig_Tests/: SimpleConfig_Tests.vcxproj  stdafx.cpp  test.cpp
doc/html/: class_config_loader.html  class_config_loader.js  class_default_parser.html  (+14 more)
linux/: main.cpp  utility.h
(+39 files in other folders)
